[Add] adding solution for Display results 	new file:   7-index.html 	modified:   styles/3-footer.css 	new file:   styles/7-places.css

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,10 +4,16 @@ footer{
     width: 100%;
     border-top: 1px solid #CCCCCC;
     display: grid;
-    position: absolute;
+    position: fixed;
     bottom: 0;
 }
 
 footer p{
-    margin: auto;
+    /*margin: auto;*/
+    position: absolute;
+    text-align: center;
+    top: 10%;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
